benchmark-results/5/merge/cseq/concurrentwitness2test.2024-11-03_20-35-45.logfiles/SV-COMP23_unreach-call.cseq-28-race_reach_84-list2_racing2.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/goblint-regression/28-race_reach_84-list2_racing2.yml/28-race_reach_84-list2_racing2.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/goblint-regression/28-race_reach_84-list2_racing2.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 84, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_7qp_hcup/tmp/tmp5h69d9ry.c
Compilation started
/tmp/BenchExec_run_7qp_hcup/tmp/tmp5h69d9ry.c:715:8: error: redefinition of ‘struct s’
  715 | struct s
      |        ^
/tmp/BenchExec_run_7qp_hcup/tmp/tmp5h69d9ry.c:710:8: note: originally defined here
  710 | struct s
      |        ^

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
